--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "history": "^5.3.0",
+    "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.22.2",
