--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
+    "recharts": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
